# handsfreerummy

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  config.py  game.py  pyproject.toml  requirements.dev.txt  requirements.txt
backend/game/: game.py
backend/handsfree/: __init__.py  config.py  secret_config.py.example
backend/handsfree/api/: __init__.py  game.py  index.py  routes.py  sockets.py
backend/handsfree/api/utils/: utils.py
backend/handsfree/game/: __init__.py  game.py  moves.py  old_game.py  sentence_training.txt  test.py  utils.py  voice.py
backend/tests/: test.py
conf/: nginx-dev.conf
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  Auth.tsx  Board.tsx  MainMenu.tsx  Playcards.tsx  Table.tsx  Type.ts  config.ts  index.tsx  socket.ts
frontend/src/api/: Api.ts  HandsFreeApi.ts  axiosConfig.ts  socket.ts
frontend/src/components/: About.tsx  MainMenu.tsx  Username.tsx
frontend/src/components/game/: Board.tsx  Card.css  Card.tsx  CardBack.tsx  CreateGame.tsx  DebugGame.tsx  Game.tsx  GameControls.tsx  GameLog.tsx  Hand.tsx  Lobby.tsx  Meld.tsx  (+7 more)
frontend/src/hooks/: Game.tsx  Modal.tsx  Profile.tsx  useApi.tsx
frontend/src/lib/: parsers.ts
frontend/src/providers/: Game.tsx  Profile.tsx
frontend/src/ui/: About.tsx  MainMenu.tsx
frontends/: README.md  package.json
frontends/src/: Board.tsx
(+21 files in other folders)
