[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handsfree"
version = "1.0.0"
dependencies = [
    "Flask",
    "eventlet",
    "Flask-Cors",
    "flask-socketio",
    "flask-redis",
    "redis[hiredis]",
    "Flask-Session"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["handsfree"]
